model interaction prototype

--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,16 @@
                 <div class="conversation-list">
                     <div class="message user">
                         <div class="message-header">
-                            User's message <span>Item</span>
+                            User's message 
                         </div>
                         <div class="message-audio">
                             <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
                         </div>
-                        <div class="message-text">“What time is it in Washington?”</div>
+                        <div class="message-text">“What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington?”</div>
                     </div>
                     <div class="message assistant">
                         <div class="message-header">
-                            Assistant's message <span>Item</span>
+                            Assistant's message 
                         </div>
                         <div class="message-audio">
                             <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="6" width="4" height="4" fill="#7c6ee6"/><rect x="10" y="2" width="4" height="12" fill="#7c6ee6"/><rect x="18" y="5" width="4" height="6" fill="#7c6ee6"/><rect x="26" y="3" width="4" height="10" fill="#7c6ee6"/><rect x="34" y="7" width="4" height="2" fill="#7c6ee6"/><rect x="42" y="4" width="4" height="8" fill="#7c6ee6"/><rect x="50" y="6" width="4" height="4" fill="#7c6ee6"/></svg>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="message user">
                         <div class="message-header">
-                            User's message <span>Item</span>
+                            User's message 
                         </div>
                         <div class="message-audio">
                             <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
@@ -42,41 +42,39 @@
                     </div>
                     <div class="message assistant">
                         <div class="message-header">
-                            Assistant's message <span>Item</span>
+                            Assistant's message 
                         </div>
                         <div class="message-audio">
                             <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="6" width="4" height="4" fill="#7c6ee6"/><rect x="10" y="2" width="4" height="12" fill="#7c6ee6"/><rect x="18" y="5" width="4" height="6" fill="#7c6ee6"/><rect x="26" y="3" width="4" height="10" fill="#7c6ee6"/><rect x="34" y="7" width="4" height="2" fill="#7c6ee6"/><rect x="42" y="4" width="4" height="8" fill="#7c6ee6"/><rect x="50" y="6" width="4" height="4" fill="#7c6ee6"/></svg>
                         </div>
                         <div class="message-text">“Apologies, in Washington state it’s 2:34pm.”</div>
                     </div>
-                    
-                </div>
-            </div>
-            <!-- Responses -->
-            <div class="panel">
-                <div class="panel-title">Responses</div>
-                <div class="responses-list">
-                    <div class="response-row">
-                        <span>Response</span>
-                        <span>Done</span>
+                    <div class="message user">
+                        <div class="message-header">
+                            User's message 
+                        </div>
+                        <div class="message-audio">
+                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
+                        </div>
+                        <div class="message-text">“What time is it in Washington?”</div>
                     </div>
-                    <div class="response-row">
-                        <span>Response</span>
-                        <span>In progress</span>
+                    <div class="message user">
+                        <div class="message-header">
+                            User's message 
+                        </div>
+                        <div class="message-audio">
+                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
+                        </div>
+                        <div class="message-text">“What time is it in Washington?”</div>
                     </div>
-                    <div class="response-row">
-                        <span>
-                            <span class="response-dot audio"></span>
-                            audio
-                        </span>
-                        <span></span>
-                    </div>
-                    <div class="response-row">
-                        <span>
-                            <span class="response-dot audio_transcript"></span>
-                            audio_transcript
-                        </span>
-                        <span></span>
+                    <div class="message user">
+                        <div class="message-header">
+                            User's message 
+                        </div>
+                        <div class="message-audio">
+                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
+                        </div>
+                        <div class="message-text">“What time is it in Washington?”</div>
                     </div>
                 </div>
             </div>
@@ -89,5 +87,6 @@
             <button class="control-btn">Stop</button>
         </div>
     </div>
+    <script src="client.js"></script>
 </body>
 </html>
