silly radio guy version, messages are displayed to ui

--- a/public/index.html
+++ b/public/index.html
@@ -12,70 +12,8 @@
             <!-- Conversation -->
             <div class="panel">
                 <div class="panel-title">Conversation</div>
-                <div class="conversation-list">
-                    <div class="message user">
-                        <div class="message-header">
-                            User's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
-                        </div>
-                        <div class="message-text">“What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington? What time is it in Washington?”</div>
-                    </div>
-                    <div class="message assistant">
-                        <div class="message-header">
-                            Assistant's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="6" width="4" height="4" fill="#7c6ee6"/><rect x="10" y="2" width="4" height="12" fill="#7c6ee6"/><rect x="18" y="5" width="4" height="6" fill="#7c6ee6"/><rect x="26" y="3" width="4" height="10" fill="#7c6ee6"/><rect x="34" y="7" width="4" height="2" fill="#7c6ee6"/><rect x="42" y="4" width="4" height="8" fill="#7c6ee6"/><rect x="50" y="6" width="4" height="4" fill="#7c6ee6"/></svg>
-                        </div>
-                        <div class="message-text">“In Washington D.C. it is currently 5:34pm.”</div>
-                    </div>
-                    <div class="message user">
-                        <div class="message-header">
-                            User's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
-                        </div>
-                        <div class="message-text">“Wait, I meant the state.”</div>
-                    </div>
-                    <div class="message assistant">
-                        <div class="message-header">
-                            Assistant's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="6" width="4" height="4" fill="#7c6ee6"/><rect x="10" y="2" width="4" height="12" fill="#7c6ee6"/><rect x="18" y="5" width="4" height="6" fill="#7c6ee6"/><rect x="26" y="3" width="4" height="10" fill="#7c6ee6"/><rect x="34" y="7" width="4" height="2" fill="#7c6ee6"/><rect x="42" y="4" width="4" height="8" fill="#7c6ee6"/><rect x="50" y="6" width="4" height="4" fill="#7c6ee6"/></svg>
-                        </div>
-                        <div class="message-text">“Apologies, in Washington state it’s 2:34pm.”</div>
-                    </div>
-                    <div class="message user">
-                        <div class="message-header">
-                            User's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
-                        </div>
-                        <div class="message-text">“What time is it in Washington?”</div>
-                    </div>
-                    <div class="message user">
-                        <div class="message-header">
-                            User's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
-                        </div>
-                        <div class="message-text">“What time is it in Washington?”</div>
-                    </div>
-                    <div class="message user">
-                        <div class="message-header">
-                            User's message 
-                        </div>
-                        <div class="message-audio">
-                            <svg viewBox="0 0 60 16" width="60" height="16"><rect x="2" y="4" width="4" height="8" fill="#2bb89b"/><rect x="10" y="2" width="4" height="12" fill="#2bb89b"/><rect x="18" y="6" width="4" height="4" fill="#2bb89b"/><rect x="26" y="3" width="4" height="10" fill="#2bb89b"/><rect x="34" y="5" width="4" height="6" fill="#2bb89b"/><rect x="42" y="7" width="4" height="2" fill="#2bb89b"/><rect x="50" y="4" width="4" height="8" fill="#2bb89b"/></svg>
-                        </div>
-                        <div class="message-text">“What time is it in Washington?”</div>
-                    </div>
+                <div class="conversation-list" id="conversation-list">
+                <!-- Messages will be appended here -->
                 </div>
             </div>
         </div>
