Added token bar to html and switched to dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
             </div>
         </div>
     </div>
+    <div id="token-limit-bar" class="token-limit-bar">
+        <div class="token-limit-bar-inner" id="token-limit-bar-inner"></div>
+        <span class="token-limit-label" id="token-limit-label"></span>
+    </div>
     <!-- Controls at the bottom center -->
     <div class="controls-container">
         <div class="controls">
