Volume button, volume slider, stop, and start buttons now function.

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
             </button>
         </div>
         <div class="volume-bar-container">
-            <div class="volume-bar-text">
-                <i class="fa-solid fa-volume-high"></i>
-            </div>
+            <button class="control-btn volume-mute-btn" id="volume-mute-btn" title="Mute/Unmute">
+                <i class="fa-solid fa-volume-high" id="volume-icon"></i>
+            </button>
             <input type="range" class="volume-slider" id="volume-slider" min="0" max="100" value="50">
         </div>
     </div>
